--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -12,19 +12,27 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]  # Cập nhật phiên bản Node.js tại đây
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [20.x]  # Sử dụng Node.js 20
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4  # Đảm bảo sử dụng phiên bản mới nhất
+
+    - name: Setup Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3  # Đảm bảo sử dụng setup-node v3
       with:
-        node-version: '20'
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build project
+      run: npm run build --if-present
+
+    - name: Run tests
+      run: npm test
+
     - name: Deploy with gh-pages
       run: |
         git remote set-url origin https://git:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
