--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "home",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://home.github.io/home",
+  "homepage": "https://Khang16.github.io/shopee_home",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
